# tree-sitter-elpi

./: .gitignore  Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package-lock.json  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
emacs/: elpi-ts-mode.el  elpi.el
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: eta.elpi
